# llm-practice

./: .gitignore  .gitmodules  LICENSE  pyproject.toml
notebooks/: practice.ipynb  respostas.ipynb
resources/: links.txt
