[tool.poetry]
name = "llm-practice"
version = "0.1.0"
description = ""
authors = ["Guilherme Cano Lopes <gui.c.lopes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
transformers = "^4.35.2"
datasets = "^2.15.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
black = "^23.11.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
